--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bilibili-mobileUI</title>
+    <!-- iconfont引用 -->
+    <link rel="stylesheet" href="./fonts/iconfont.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <!-- 头部区域 -->
+    <header>
+        <span class="iconfont icon-bilibili"></span>
+        <div>
+            <span class="iconfont icon-search"></span>
+            <img src="./images/login.png@48w_48h_1c.png" alt="">
+            <img src="./images/navOpenApp.png" alt="">
+        </div>
+    </header>
+
+    <!-- 导航区域 -->
+    <nav></nav>
+
+    <!-- 列表区域 -->
+    <div></div>
+
+    <!-- 尾部区域 -->
+    <footer></footer>
 </body>
 </html>
