--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <span class="iconfont icon-bilibili"></span>
         <div>
             <span class="iconfont icon-search"></span>
-            <img src="./images/login.png@48w_48h_1c.png" alt="">
-            <img src="./images/navOpenApp.png" alt="">
+            <img class="btn-login" src="./images/login.png@48w_48h_1c.png" alt="">
+            <img class="btn-app" src="./images/navOpenApp.png" alt="">
         </div>
     </header>
 
