--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     </header>
 
     <!-- 导航区域 -->
-    <nav></nav>
+    <nav>
+        <span class="active">首页</span>
+        <span>动画</span>
+        <span>番剧</span>
+        <span>国创</span>
+        <span>音乐</span>
+        <span>舞蹈</span>
+    </nav>
 
     <!-- 列表区域 -->
     <div></div>
