--- a/index.html
+++ b/index.html
@@ -112,9 +112,169 @@
                 顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
             </div>
         </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/video-1.png" alt="">
+            <div class="count-box">
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-bofangshu"></span>
+                    <!-- 播放量 -->
+                    120.0万
+                </span>
+                <span>
+                    <!-- 小图标 -->
+                    <span class="iconfont icon-danmushu"></span>
+                    <!-- 弹幕量 -->
+                    2.4万
+                </span>
+            </div>
+            <div class="title">
+                顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+            </div>
+        </div>
     </div>
 
     <!-- 尾部区域 -->
-    <footer></footer>
+    <footer>去 bilibili App 看更多</footer>
 </body>
 </html>
