导航吸顶效果

--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <div class="fixed-top">
     <!-- 头部区域 -->
-    <header>
-        <span class="iconfont icon-bilibili"></span>
-        <div>
-            <span class="iconfont icon-search"></span>
-            <img class="btn-login" src="./images/login.png@48w_48h_1c.png" alt="">
-            <img class="btn-app" src="./images/navOpenApp.png" alt="">
-        </div>
-    </header>
+        <header>
+            <span class="iconfont icon-bilibili"></span>
+            <div>
+                <span class="iconfont icon-search"></span>
+                <img class="btn-login" src="./images/login.png@48w_48h_1c.png" alt="">
+                <img class="btn-app" src="./images/navOpenApp.png" alt="">
+            </div>
+        </header>
 
-    <!-- 导航区域 -->
-    <nav>
-        <span class="active">首页</span>
-        <span>动画</span>
-        <span>番剧</span>
-        <span>国创</span>
-        <span>音乐</span>
-        <span>舞蹈</span>
-    </nav>
+        <!-- 导航区域 -->
+        <nav>
+            <span class="active">首页</span>
+            <span>动画</span>
+            <span>番剧</span>
+            <span>国创</span>
+            <span>音乐</span>
+            <span>舞蹈</span>
+        </nav>
+    </div>
 
     <!-- 列表区域 -->
     <div class="list">
