--- a/index.html
+++ b/index.html
@@ -278,5 +278,7 @@
 
     <!-- 尾部区域 -->
     <footer>去 bilibili App 看更多</footer>
+    <script src="./js/axios.js"></script>
+    <script src="./js/vue.js"></script>
 </body>
 </html>
