--- a/index.html
+++ b/index.html
@@ -30,244 +30,24 @@
 
         <!-- 列表区域 -->
         <div class="list">
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
+            <div class="item" v-for="item in videoList">
+                <img :src="item.pic" alt="">
                 <div class="count-box">
                     <span>
                         <!-- 小图标 -->
                         <span class="iconfont icon-bofangshu"></span>
                         <!-- 播放量 -->
-                        120.0万
+                        {{ item.play }}
                     </span>
                     <span>
                         <!-- 小图标 -->
                         <span class="iconfont icon-danmushu"></span>
                         <!-- 弹幕量 -->
-                        2.4万
+                        {{ item.video_review }}
                     </span>
                 </div>
                 <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
-                </div>
-            </div>
-            <div class="item">
-                <img src="./images/video-1.png" alt="">
-                <div class="count-box">
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-bofangshu"></span>
-                        <!-- 播放量 -->
-                        120.0万
-                    </span>
-                    <span>
-                        <!-- 小图标 -->
-                        <span class="iconfont icon-danmushu"></span>
-                        <!-- 弹幕量 -->
-                        2.4万
-                    </span>
-                </div>
-                <div class="title">
-                    顶配M1 Max挤爆牙膏！近五万的价格到底香不香？2021 MacBook Pro评测
+                    {{ item.title }}
                 </div>
             </div>
         </div>
